Add postasget parameter to generic acme URI