@@ -16,8 +16,11 @@ package org.shredzone.acme4j.provider;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
+import java.util.regex.Pattern;
 
 import javax.annotation.ParametersAreNonnullByDefault;
+
+import org.shredzone.acme4j.connector.Connection;
 
 /**
  * A generic {@link AcmeProvider}. It should be working for all ACME servers complying to
@@ -28,6 +31,9 @@ import javax.annotation.ParametersAreNonnullByDefault;
 @ParametersAreNonnullByDefault
 public class GenericAcmeProvider extends AbstractAcmeProvider {
 
+    private static final Pattern PARAM_POST_AS_GET =
+                Pattern.compile("(^|.*?&)postasget=false(&.*|$)");
+
     @Override
     public boolean accepts(URI serverUri) {
         return "http".equals(serverUri.getScheme())
@@ -37,9 +43,20 @@ public class GenericAcmeProvider extends AbstractAcmeProvider {
     @Override
     public URL resolve(URI serverUri) {
         try {
-            return serverUri.toURL();
+            return new URL(serverUri.getScheme(), serverUri.getHost(), serverUri.getPort(), serverUri.getPath());
         } catch (MalformedURLException ex) {
             throw new IllegalArgumentException("Bad generic server URI", ex);
+        }
+    }
+
+    @Override
+    @SuppressWarnings("deprecation")
+    public Connection connect(URI serverUri) {
+        String query = serverUri.getQuery();
+        if (query != null && PARAM_POST_AS_GET.matcher(query).matches()) {
+            return new org.shredzone.acme4j.connector.PreDraft15Connection(createHttpConnector());
+        } else {
+            return super.connect(serverUri);
         }
     }
 
